--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,12 @@
 {
     "cSpell.words": [
+        "Asabeneh",
+        "countires",
         "fibonacci",
         "objt",
         "opcion",
-        "telefono"
+        "telefono",
+        "tuplas",
+        "Yetayeh"
     ]
 }
