--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Asabeneh",
         "countires",
         "fibonacci",
+        "numeros",
         "objt",
         "opcion",
         "telefono",
