--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
     "cSpell.words": [
         "Asabeneh",
+        "camara",
         "countires",
         "fibonacci",
+        "instanciamos",
         "numeros",
         "objt",
         "opcion",
