día 15 y 16 POO MRO Polimorfismo encapsulamiento

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
         "countires",
         "fibonacci",
         "instanciamos",
+        "Mamifero",
+        "murcielago",
         "numeros",
         "objt",
         "opcion",
