conceptos de POO y juego de fusion con clases

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "camara",
         "countires",
         "fibonacci",
+        "funcion",
+        "instanciada",
         "instanciamos",
         "Mamifero",
         "murcielago",
