fin de introducción a P O O

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,15 +3,22 @@
         "Asabeneh",
         "camara",
         "countires",
+        "Extensibilidad",
         "fibonacci",
         "funcion",
         "instanciada",
         "instanciamos",
         "Mamifero",
+        "Mantenibilidad",
         "murcielago",
+        "Notificador",
+        "notificadoras",
         "numeros",
         "objt",
         "opcion",
+        "Ortografico",
+        "posicion",
+        "Reusabilidad",
         "telefono",
         "tuplas",
         "Yetayeh"
