--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Asabeneh",
         "camara",
         "countires",
+        "Excepcion",
         "Extensibilidad",
         "fibonacci",
         "funcion",
