--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
     "cSpell.words": [
+        "animacion",
         "Asabeneh",
+        "blit",
         "camara",
+        "chetos",
         "countires",
         "Excepcion",
         "Extensibilidad",
@@ -9,16 +12,22 @@
         "funcion",
         "instanciada",
         "instanciamos",
+        "KEYDOWN",
+        "KEYUP",
         "Mamifero",
         "Mantenibilidad",
+        "mastil",
+        "milisegundos",
         "murcielago",
         "Notificador",
         "notificadoras",
         "numeros",
         "objt",
+        "oneline",
         "opcion",
         "Ortografico",
         "posicion",
+        "pygame",
         "Reusabilidad",
         "telefono",
         "tuplas",
