--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,11 @@
         "Asabeneh",
         "blit",
         "camara",
+        "centerx",
+        "centery",
         "chetos",
         "countires",
+        "diferenci",
         "Excepcion",
         "Extensibilidad",
         "fibonacci",
